@@ -1,6 +1,8 @@
 AUX R-2.8.0-without-X.patch 430 RMD160 9601d7fb97146196e7a56201ccdcc099a56327b1 SHA1 8281a76bb192990305ab209cf69bf60474652978 SHA256 62ec24c65e60c5ce6205ae4c110bc845166826f07a5cb9ec621e2afe969751c0
 DIST R-2.8.1.tar.gz 16585380 RMD160 1d12f8833a7b368d3cc06488172394ce4cb165ff SHA1 71e577dc061ff8720ce399471a75dea5b8fb1dab SHA256 ab488af73ce7a4f2057afcf0e725be96c9ae37f8721143004397b91928ecfa60
+DIST R-2.9.0.tar.gz 18423754 RMD160 90c9b42d7e8f3c78fa3442690dedb23c10d9a294 SHA1 97c610b31113db27999cf615d4182d68c8602a4f SHA256 f2de4b710feabf0395ee3503befc69332b78ed6b159e959e93bc086a1a8ad818
 DIST R.bash_completion.bz2 4019 RMD160 796951fb32e9ea4074dcd5ba3da5955ec0193993 SHA1 05ddebef0df16f0bf35aecc8fcb702ad5d106e5e SHA256 424790f7be27a0aad7b65289c97cb15d2ca9ee272f30f3e5c906217e487c7f85
 EBUILD R-2.8.1.ebuild 4068 RMD160 a5f0e8948b1072b0180ec20c2b9906f9a1e9b2de SHA1 e548e7a8881853686c1e56280364e17994fdef6e SHA256 ede9e69c3b31ff7d489bd82823c15a5f9ea537b9fd723677dcba52c5aa2b2df4
-MISC ChangeLog 22111 RMD160 744ac26966d11b369c09d360186bb703a1c7a958 SHA1 7b008db5ea1897bc1188f68a0aceeba28dc5c6bf SHA256 aca8f85975abad285be61e2d3da7b56b392e6e45eb3c1c562053c7a5dc47e717
+EBUILD R-2.9.0.ebuild 4025 RMD160 a3fd26707a9421652f86193e8c3634fb02278e7a SHA1 193df26e49df7979e461b6f8c54856ecabe18128 SHA256 74333b621a66687dde9af3b35e19c3f66a9573d34aa1726d6093c2908bb9a727
+MISC ChangeLog 22236 RMD160 159df309c6eaf66b8079673fd65f07716e71051a SHA1 3566c0c38925d77e2849bc5204c685fdbf511887 SHA256 b1f6bf018a788a707bdcdaaf069c535bd0e223c993166c51d8a69fe1a65a344a
 MISC metadata.xml 1031 RMD160 375436b81f2969a32b673a47fdcd7a8ddadb6fa3 SHA1 fefc629218f970fc24f6b4e30c482112ea6e6129 SHA256 6f692bb80f78dfd8987ae3f70c12c40924ef5e0596267d928953f37f44223968
