@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/R
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.150 2009/04/18 15:05:11 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.151 2009/04/21 16:06:37 bicatali Exp $
+
+*R-2.9.0 (21 Apr 2009)
+
+  21 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org> -R-2.7.1.ebuild,
+  +R-2.9.0.ebuild:
+  Bump
 
   18 Apr 2009; Markus Meier <maekke@gentoo.org> R-2.8.1:
   amd64/x86 stable, bug #265338
